Change element position function added

--- a/pages/page1.html
+++ b/pages/page1.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>h</h1>
+    <h1 style="position: absolute; left: 700px; top: 203px;">h</h1>
     <p>This is a sample HTML page for testing purposes.</p>
 <h5>new heading</h5><p>hhhh</p></body>
 </html>
